<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main_Screen"
    android:background="@drawable/backround_press_screen"
    android:id="@+id/activity_main_screen">


    <ImageButton
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:id="@+id/imageButton"
        android:background="@drawable/start_button2"
        android:onClick="startTheGame"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_to_tv"
        android:id="@+id/main_screen_titleone"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/press_tv"
        android:id="@+id/main_screen_titletwo"
        android:layout_below="@+id/main_screen_titleone"
        android:layout_centerHorizontal="true"
        android:textSize="100sp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_score"
        android:id="@+id/best_score_tv"
        android:textSize="30sp"
        android:textColor="#ff000000"
        android:layout_below="@+id/main_screen_titletwo"
        android:layout_alignLeft="@+id/main_screen_titleone"
        android:layout_alignStart="@+id/main_screen_titleone"
        android:layout_marginTop="79dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_score_number"
        android:id="@+id/best_score_number_tv"
        android:textSize="30sp"
        android:layout_alignTop="@+id/best_score_tv"
        android:layout_alignRight="@+id/main_screen_titletwo"
        android:layout_alignEnd="@+id/main_screen_titletwo"
        android:textColor="#ff000000" />


</RelativeLayout>
