<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sensational.timetopress.press_screen"
    android:id="@+id/activity_press_screen"
    android:background="@drawable/backround_press_screen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_left_tv"
            android:id="@+id/time_left_tv"
            android:textColor="#ff000000"
            android:textSize="30sp"
            android:paddingLeft="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_left_number_tv"
            android:id="@+id/time_left_number_tv"
            android:textSize="30sp"
            android:textColor="#ff000000"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amount_of_taps"
        android:id="@+id/amount_of_taps"
        android:textSize="50sp"
        android:textColor="#ff000000"
        android:autoText="false"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="100dp"/>

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageButton2"
        android:layout_gravity="center_horizontal"
        android:onClick="triggerTapOnMainButton"
        android:background="@drawable/main_button" />


</LinearLayout>
